# vector_app

./: .gitignore  README.md  manage.py  pyproject.toml
delivery_order/: models.py
delivery_order/migrations/: 0001_initial.py
event/: models.py
event/migrations/: 0001_initial.py
menu/: models.py  urls.py  views.py
menu/migrations/: 0001_initial.py
templates/menu/: menu_list.html
templates/user/: login.html  register.html
user/: models.py  urls.py  views.py
user/migrations/: 0001_initial.py
vector_project/: asgi.py  settings.py  urls.py  wsgi.py
