[tool.poetry]
name = "vector-bar"
version = "0.1.0"
description = "Project for Vector lounge bar. For orders inside and delivery serves."
authors = ["Dmitriy"]
readme = "README.md"
packages = [{include = "vector_bar"}]

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.2.2"
pillow = "^10.0.0"
django-money = "^3.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
